--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</div>
 		<div class="grid-kid card3">
 		  <h4>Karma</h4>
-		  <p>Regularly evaluates our talen to ensure quality.</p>
+		  <p>Regularly evaluates our talent to ensure quality.</p>
 		  <img src="images/icon-karma.svg" alt="karma">
 		</div>
 		<div class="grid-kid card4">
